--- a/quibble/src/index.css
+++ b/quibble/src/index.css
@@ -8,3 +8,11 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
+
+body{
+  height: 100vh;
+}
+
+.ql-editor{
+  font-size: 1.05rem;
+}
